# toy-compiler

./: .gitignore  README.md
code/: CMakeLists.txt  main.cpp  start.sh
code/config/: lex.l  parser.y  y.output
code/include/: ast.h  config.h  def.h  parser.tab.h  symbol_table.h  syntax.h  type.h  use_llvm.h
code/script/: build.sh  clear.sh  generate.sh  install.sh  run.sh  setup.sh  setup_env.sh  test.sh
code/src/: analysis.cpp  ast.cpp  lex.yy.cc  parser.tab.cc  symbol_table.cpp  translate.cpp
code/test/: test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
graph/: report.md
